tests/api/reference/negative/11-repeat-byte-range.asm
const invalid: bytes = bytes.repeat(2, 256)
